# localchain

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  index.html
client/src/: lib.rs
client/src/api/: client.rs
client/src/ui/: block_page.rs  blocks_column.rs  logs_column.rs  mod.rs  transaction_page.rs
server/: Cargo.toml
server/src/: main.rs
server/src/anvil/: process.rs
shared/src/: lib.rs
shared/src/types/: block.rs  block_response.rs  chain_config.rs  mod.rs  transaction.rs  transaction_response.rs
