[workspace]
members = [
  "server",
  "client",
  "shared",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
once_cell = "1.21"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5" }
tokio-stream = { version = "0.1" }
gloo = "0.5"
gloo-net = "0.5"
futures-util = "0.3"
alloy = "1.0"
uuid = { version = "1" }