[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
leptos = { version = "0.8.10", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
gloo-net = { version = "0.5", features = ["http"] }
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent"] }
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.trunk]
public_url = "/"
