[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "io-util"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tokio-stream = { version = "0.1", features = ["io-util", "sync"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }