[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "io-util"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
tokio-stream = { workspace = true, features = ["io-util", "sync"] }
futures = "0.3"
uuid = { workspace = true, features = ["v4", "serde"] }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }